Semantik 1.0.5
--------------
* Highlight code snippets in beamer presentations/pdflatex using Minted
* Fix drawing artifacts when switching diagrams

Semantik 1.0.4
--------------
* Improve PDF diagram export
* Fix Qt Dbus compilation errors on some systems

Semantik 1.0.3
--------------
* Updated import filters to Python3 syntax #83
* Fix image imports #84
* Improve zigzag lines routing for sequence elements

Semantik 1.0.2
--------------
* Fix truncated saved documents in combination with accentuated characters
* Deply highcolor icons to force the application icon
* Deselect currently selected diagram elements after adding a new one
* Add spell checking to the text widget
* Improve paragraph handling for generated OpenOffice.org text documents

Semantik 1.0.1
--------------
* Add a diagram sequence element
* Fix improper pdf document dimensions
* Fix the configuration and build on FreeBSD
* Add installation notes for Fedora

Semantik 1.0.0
--------------
* Port to KDE5 and Python 3
* Add SVG Export from the menus
* Add new diagram shapes
* Add resize handles to diagram objects
* Add diagram link labels
