@@ -1,7 +1,6 @@
 Manual positioning of diagram link labels
 Source code snippets as data attachments
 Arbitrary SVG shapes
-Predefined diagram object colors
 Z-index in diagrams
 Crossing diagram arrows for the one with higher z-index
 S5 default picture size?
